# sundai-auto-customize-llm

./: .gitignore  notes.md  pyproject.toml  teacher_server.py
data/: qa_slim.jsonl
knowledge-ingestion-test/: test.jsonl
notebooks/: document_pre_processing.ipynb  evaluation.ipynb  knowledge_generation.ipynb  mid-training.ipynb  on-policy-distillation.ipynb  teacher_client.ipynb
scripts/: docling_v2_config.yaml  docparser_v2.py  generate_seed_data.py  mid_training.py
