[project]
name = "mar-15"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "docling>=2.80.0",
    "dotenv>=0.9.9",
    "fastapi>=0.135.1",
    "instruction-following-eval",
    "jupyter>=1.1.1",
    "loguru>=0.7.3",
    "markdown-it-py>=4.0.0",
    "openai>=2.28.0",
    "pydantic>=2.12.5",
    "sdg-hub>=0.8.8",
    "training-hub[lora]>=0.6.0",
    "uvicorn>=0.42.0",
    "wandb>=0.25.1",
]

[tool.uv.sources]
instruction-following-eval = { git = "https://github.com/josejg/instruction_following_eval.git" }
